tests/init/neg/local-warm4.check
-- Error: tests/init/neg/local-warm4.scala:18:20 -----------------------------------------------------------------------
18 |                a = newA // error
   |                    ^^^^
   |                    The RHS of reassignment must be fully initialized. Calling trace:
   |                    -> object localWarm {	[ local-warm4.scala:1 ]
   |                       ^
   |                    -> val a = new A(5)	[ local-warm4.scala:26 ]
   |                               ^^^^^^^^
   |                    -> class A(x: Int) extends Foo(x) {	[ local-warm4.scala:6 ]
   |                       ^
   |                    -> val b = new B(y)	[ local-warm4.scala:10 ]
   |                               ^^^^^^^^
   |                    -> class B(x: Int) extends A(x) {	[ local-warm4.scala:13 ]
   |                       ^
   |                    -> class A(x: Int) extends Foo(x) {	[ local-warm4.scala:6 ]
   |                       ^
   |                    -> increment()	[ local-warm4.scala:9 ]
   |                       ^^^^^^^^^^^
   |                    -> override def increment(): Unit = {	[ local-warm4.scala:15 ]
   |                       ^
   |                    -> updateA()	[ local-warm4.scala:21 ]
   |                       ^^^^^^^^^
   |                    -> def updateA(): Unit = {	[ local-warm4.scala:16 ]
   |                       ^
   |                    -> a = newA // error	[ local-warm4.scala:18 ]
   |                           ^^^^
